--- a/youtube.html
+++ b/youtube.html
@@ -9,68 +9,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <style>
-        p {
-            font-family: Roboto, Arial;
-            margin-top: 0px;
-            margin-bottom: 0px;
-        }
-
-        .thumbnail {
-            width: 100%;
-        }
-
-        .search-bar {
-            display: block;
-        }
-
-        .video-title {
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 20px;
-            margin-bottom: 12px;
-        }
-
-
-        .video-info-grid {
-            display: grid;
-            grid-template-columns: 50px 1fr;
-        }
-
-
-
-        .profile-picture {
-            width: 40px;
-            border-radius: 50px;
-        }
-
-        .thumbnail-row {
-            margin-bottom: 20px;
-        }
-
-        .video-author,
-        .video-stats {
-            font-size: 12px;
-            color: rgb(96, 96, 96);
-        }
-
-        .video-author {
-            margin-bottom: 4px;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            column-gap: 16px;
-            row-gap: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/video.css">
 
 
 </head>
 
 <body>
-    <input class="search-bar" type="textbox" placeholder="Search">
+
+    <div class="header">
+        <div class="left-section">
+            ls
+        </div>
+        <div class="middle-section">
+
+            <input class="search-bar" type="textbox" placeholder="Search">
+
+        </div>
+        <div class="right-section">
+            rs
+        </div>
+
+
+    </div>
 
 
     <div class="video-grid">
