--- a/youtube.html
+++ b/youtube.html
@@ -20,15 +20,29 @@
 
     <div class="header">
         <div class="left-section">
-            ls
+            <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+            <img class="youtube-logo" src="icons/youtube-logo.svg">
+
         </div>
         <div class="middle-section">
 
             <input class="search-bar" type="textbox" placeholder="Search">
 
+            <button class="search-button">
+                <img class="search-icon" src="icons/search.svg">
+            </button>
+
+            <button class="voice-search-button">
+                <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+
+            </button>
+
         </div>
         <div class="right-section">
-            rs
+            <img class="upload-icon" src="icons/upload.svg">
+            <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+            <img class="notifications-icon" src="icons/notifications.svg">
+            <img class="current-user-picture" src="channel-profile/cp.jpg">
         </div>
 
 
