Used position relative, position absolute and position fixed

--- a/youtube.html
+++ b/youtube.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
-
+    <link rel="stylesheet" href="styles/sidebar.css">
 
 </head>
 
@@ -41,12 +41,17 @@
         <div class="right-section">
             <img class="upload-icon" src="icons/upload.svg">
             <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-            <img class="notifications-icon" src="icons/notifications.svg">
+            <div class="notifications-icon-container">
+                <img class="notifications-icon" src="icons/notifications.svg">
+                <div class="nptifications-count">3</div>
+
+            </div>
             <img class="current-user-picture" src="channel-profile/cp.jpg">
         </div>
 
-
     </div>
+
+    <div class="sidebar">sidebar</div>
 
 
     <div class="video-grid">
@@ -55,6 +60,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hqdefault.avif">
+                <div class="video-time">1:13:24</div>
             </div>
 
             <div class="video-info-grid">
@@ -85,6 +91,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hqdefault (1).avif">
+                <div class="video-time">3:13</div>
             </div>
 
             <div class="video-info-grid">
@@ -112,6 +119,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hq720.avif">
+                <div class="video-time">3:27</div>
             </div>
 
             <div class="video-info-grid">
@@ -143,6 +151,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hqdefault2.avif">
+                <div class="video-time">3:31</div>
             </div>
 
             <div class="video-info-grid">
@@ -170,6 +179,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hq3.avif">
+                <div class="video-time">3:52</div>
             </div>
 
             <div class="video-info-grid">
@@ -200,6 +210,7 @@
 
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnail/hqdefault3.avif">
+                <div class="video-time">12:40</div>
             </div>
 
             <div class="video-info-grid">
