--- a/youtube.html
+++ b/youtube.html
@@ -30,20 +30,31 @@
 
             <button class="search-button">
                 <img class="search-icon" src="icons/search.svg">
+                <div class="tooltip">Search</div>
             </button>
 
             <button class="voice-search-button">
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+                <div class="tooltip">Search with your voice </div>
+
 
             </button>
 
         </div>
         <div class="right-section">
-            <img class="upload-icon" src="icons/upload.svg">
-            <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+            <div class="upload-icon-container">
+                <img class="upload-icon" src="icons/upload.svg">
+                <div class="tooltip">Create</div>
+
+            </div>
+            <div class="youtube-apps-icon-container">
+                <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+                <div class="tooltip">YouTube Apps</div>
+            </div>
             <div class="notifications-icon-container">
                 <img class="notifications-icon" src="icons/notifications.svg">
                 <div class="nptifications-count">3</div>
+                <div class="tooltip">Notifications</div>
 
             </div>
             <img class="current-user-picture" src="channel-profile/cp.jpg">
@@ -51,7 +62,34 @@
 
     </div>
 
-    <div class="sidebar">sidebar</div>
+    <div class="sidebar">
+
+        <div class="sidebar-link">
+            <img src="icons/home.svg">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/explore.svg">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/subscriptions.svg">
+            <div>Subscriptions</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/originals.svg">
+            <div>Originals</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/youtube-music.svg">
+            <div>YouTube Music</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/library.svg">
+            <div>Library</div>
+        </div>
+
+    </div>
 
 
     <div class="video-grid">
@@ -59,7 +97,10 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hqdefault.avif">
+                <a href="https://youtu.be/Nxg0vQk05os?si=0H2M8Jwt9ARhCz7k">
+                    <img class="thumbnail" src="thumbnail/hqdefault.avif">
+                </a>
+
                 <div class="video-time">1:13:24</div>
             </div>
 
@@ -90,7 +131,10 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hqdefault (1).avif">
+                <a href="https://youtu.be/GyT4iqSKL2Q?si=EdsyXTobwBL3Qula">
+                    <img class="thumbnail" src="thumbnail/hqdefault (1).avif">
+
+                </a>
                 <div class="video-time">3:13</div>
             </div>
 
@@ -118,7 +162,9 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hq720.avif">
+                <a href="https://youtu.be/MEYgIZGyEZw?si=CMuskuZUypU1KIHn"><img class="thumbnail"
+                        src="thumbnail/hq720.avif"></a>
+
                 <div class="video-time">3:27</div>
             </div>
 
@@ -150,7 +196,9 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hqdefault2.avif">
+                <a href="https://youtu.be/s7MVecqT4CA?si=bMgZ8zm61nTrQnKL"><img class="thumbnail"
+                        src="thumbnail/hqdefault2.avif"></a>
+
                 <div class="video-time">3:31</div>
             </div>
 
@@ -161,7 +209,7 @@
 
                 <div class="video-info">
                     <p class="video-title">
-                        Robin and the Backstabbers &#8722; Soare cu dinti (Official video)
+                        Sat după sat
                     </p>
                     <p class="video-author">
                         Robin and the Backstabbers
@@ -178,7 +226,10 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hq3.avif">
+                <a href="https://youtu.be/TW97rqUDTV8?si=jN3Qs9VVORb9AT7E">
+                    <img class="thumbnail" src="thumbnail/hq3.avif">
+
+                </a>
                 <div class="video-time">3:52</div>
             </div>
 
@@ -209,7 +260,10 @@
         <div class="video-preview">
 
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnail/hqdefault3.avif">
+                <a href="https://youtu.be/eTp5eAqvkvM?si=c4EOTtnZ3X_9R_yX">
+                    <img class="thumbnail" src="thumbnail/hqdefault3.avif">
+
+                </a>
                 <div class="video-time">12:40</div>
             </div>
 
